# wicspy

./: .cursorignore  .gitignore  LICENSE  README.md  pyproject.toml  setup.py  upload_pypi.sh  wicspy.py
.github/workflows/: publish.yml
bark/: init.py
examples/: basic_usage.py
src/wicspy/: __init__.py  bark.py  timer_tool.py
src/wicspy/config/: __init__.py
src/wicspy/messaging/: __init__.py  bark.py
src/wicspy/scripts/: bark.py  radiation.py
src/wicspy/server/: __init__.py  monitor.py  process.py
src/wicspy/web/: __init__.py  scraper.py  seawater_radiation.py
wicspy/: __init__.py  bark.py  timer_tool.py
wicspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
