[project]
name = "wicspy"
dynamic = ["version"]
description = "A Python package for wicsp."
authors = [
    { name = "wicsp", email = "wicspa@gmail.com" }
]
dependencies = [
    "loguru>=0.7.2",
    "requests>=2.32.3",
    "tqdm>=4.66.5",
    "sqlmodel>=0.0.22",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wicspy"]

[tool.hatch.version]
path = "src/wicspy/__init__.py"
