[project]
name = "wicspy"
version = "0.1.7"
description = "A comprehensive Python utilities library for various tasks"
readme = "README.md"
authors = [
    { name = "wicsp", email = "wicspa@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "pydantic>=2.0.0",
    "httpx[socks]>=0.24.0", # 现代化HTTP客户端，支持异步
    "beautifulsoup4>=4.12.0", # 网页解析
    "rich>=13.0.0", # 终端美化
    "python-dotenv>=1.0.0", # 环境变量管理
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "black>=23.0.0",
    "pdoc>=15.0.1",
]

[project.scripts]
bark = "src.wicspy.utils.send_bark_message:bark"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

